--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -186,6 +186,7 @@ The following data are available:
 
 
 \section{Body}
+\label{sec:EL:BODY}
 The \kw{body} element describes a lumped rigid body when connected 
 to a regular, 6 degree of freedom structural node, or a point mass
 when connected to a rotationless, 3 degree of freedom structural node.
