first round of documentation

--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -31,6 +31,10 @@
 	JCND = {J.\ of Computational and Nonlinear Dynamics}
 }
 
+@string{
+	COMPMECH = {Computational Mechanics}
+}
+
 @ARTICLE{ANDRIGHETTONI98,
 	author = "M. Andrighettoni and Paolo Mantegazza",
 	year = 1998,
@@ -3170,5 +3174,12 @@
 	number = {2},
 	pages = {307--319},
 	note = {{doi:10.1007/s00466-008-0307-x}}
+}
+
+@article{ZHANG-2021-COMPMECH-MS34,
+	author = {Huimin Zhang and Runsen Zhang and Pierangelo Masarati},
+	title = {Improved second-order unconditionally stable schemes of linear multi-step and equivalent single-step integration methods},
+	journal = COMPMECH,
+	note = {{doi:10.1007/s00466-020-01933-y}}
 }
 
