--- a/manual/input/problems.tex
+++ b/manual/input/problems.tex
@@ -341,7 +341,7 @@ and the algebraic variables, and a driver is used, to allow parameter
 dependent radius variation.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{method_data} ::= \{ \kw{ms} | \kw{ms} | \kw{ms3} | \kw{ms4} | \kw{hope} \} ,
+    \bnt{method_data} ::= \{ \{ \kw{ms} | \kw{ms2} \} | \kw{ms3} | \kw{ms4} | \kw{hope} \} ,
         (\hty{DriveCaller}) \bnt{differential_radius}
         [ , (\hty{DriveCaller}) \bnt{algebraic_radius} ]
 \end{Verbatim}
