list at least some Reinard's additions

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,13 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 MBDyn 1.X-Devel
 	Enhancements:
+		- added Watson, Pardiso, QR and SPQR wrappers (Reinard Resch)
+		- add matrix free line search (Reinard Resch)
+		- add automatic differentiation capabilities to many elements,
+		  including modal joint, total joint and total pin joint, 
+		  elastic and viscoelastic beams (Reinard Resch)
+		- new implementation of the automatic differentiation;
+		  enable with --enable-sparse-autodiff (Reinard Resch)
 		- added fully coupled piezolectric beam (Marco Morandini & Wenguo Zhu)
 		- the new handling of math expressions and
 		  "string" drive caller (With the contribution
