--- a/manual/input/module-hfelem.tex
+++ b/manual/input/module-hfelem.tex
@@ -52,11 +52,11 @@ The (complex) magnitude of the fundamental harmonic of each signal is logged at 
     \bnt{arglist} ::=
         \kw{inputs number} , (\ty{integer}) \bnt{inputs_number} ,
             (\hty{DriveCaller}) \bnt{input_signal}
-                    [ \{ \kw{test} | \kw{output} \} , \{ \kw{true} | \kw{false} | (\ty{bool}) \bnt{value} \} ]
+                    [ \{ \kw{test} | \kw{output} | \kw{target} \} , \{ \kw{true} | \kw{false} | (\ty{bool}) \bnt{value} \} ]
                 [ , ... ] , # \nt{inputs_number} occurrences
-        [\kw{output format} , \{ \kw{complex} | \kw{magnitude phase} \}, [\kw{normalized} ,]]
+        [ \kw{output format} , \{ \kw{complex} | \kw{magnitude phase} \}, [\kw{normalized} ,]]
 	\kw{steps number} , (\ty{integer}) \bnt{steps_number} ,
-        [\kw{max delta t} , (\ty{real}) \bnt{max_delta_t} ,]
+        [ \kw{max delta t} , (\hty{DriveCaller}) \bnt{max_delta_t} ,]
         \kw{initial angular frequency} , (\ty{real}) \bnt{omega0} ,
             [ \kw{max angular frequency} , \{ \kw{forever} | (\ty{real}) \bnt{omega_max} \} , ]
             \kw{angular frequency increment} ,
@@ -64,16 +64,20 @@ The (complex) magnitude of the fundamental harmonic of each signal is logged at 
                     | \kw{multiplicative} , (\ty{real}) \bnt{omega_mul_increment}
                     | \kw{custom} , (\ty{real}) \bnt{omega1} [ , ... ] , \kw{last} \} ,
         [ \kw{initial time} , (\ty{real}) \bnt{initial_time} ,
-	    [ \kw{prescribed time step} , (\hty{DriveCaller}) \bnt{time_step} , ] ]
+	    [ \kw{prescribed time step} , (\hty{DriveCaller}) \bnt{initial_time_step} , ] ]
         [ \kw{RMS test}, 
-	    [ \kw{RMS target}, (\ty{real}) \bnt{RMS target value}, 
-	        [\kw{max amplitude relative difference} , (\ty{real}) \bnt{max_amplitude_relative_difference} , ] ] ]
+	    [ \kw{RMS target}, (\hty{DriveCaller}) \bnt{RMS_target_value} 
+	        [ , \kw{initial amplitude} , (\ty{real}) \bnt{initial_amplitude} ]
+	        [ , \kw{overshoot} , (\ty{real}) \bnt{overshoot} ] , ]
+	    [ \kw{RMS prev periods}, (\ty{integer}) \bnt{RMS_prev_periods} ] ]
         [ \kw{tolerance} , (\ty{real}) \bnt{tolerance} , ]
         \kw{min periods} , (\ty{integer}) \bnt{min_periods}
         [ , \kw{max periods} , (\ty{integer}) \bnt{max_periods}
             [ , \kw{no convergence strategy} , \{ \kw{continue} | \kw{abort} \} ] ]
         [ , \kw{timestep drive label} , (\ty{unsigned}) \bnt{timestep_label} ]
         [ , \kw{print all periods} ]
+        [ , \kw{write after convergence periods} , (\ty{integer}) \bnt{write_after_convergence_periods} 
+	    [ , \kw{frequency} , (\ty{integer}) \bnt{write_frequency_after_convergence} ] ]
 \end{Verbatim}
 with
 \begin{itemize}
@@ -89,6 +93,7 @@ drive callers, either alone or in combination with other drive callers, are used
 If \kw{test} is \kw{true}, the signal will be used to evaluate convergence, otherwise it will be ignored;
 If \kw{output} is \kw{true}, the fundamental harmonic of the signal will appear in the output, otherwise it will be ignored;
 by default, i.e.\ if neither of the keywords \kw{test} nor \kw{output} are used, the signal is used to test for convergence and appears in the output;
+If \kw{target} is \kw{true}, and option \kw{RMS target} is an argument, the signal is used to change \kw{amplitude} until the signal's RMS amplitude matches $\nt{RMS\_target\_value}$, within the $\nt{tolerance}$.
 
 \item \kw{output format}; coose the output format: either \kw{complex} (default) of \kw{magnitude phase};
 if \kw{normalized} the output is normalized with respect to the \kw{amplitude} (see
@@ -99,10 +104,10 @@ if \kw{normalized} the output is normalized with respect to the \kw{amplitude} (
 	\Delta t = \frac{2 \pi}{\omega \cdot \nt{steps\_number}}
 \end{align*}
 
-\item $\nt{max\_delta\_t} > 0.$; the maximum value of the time step $\Delta t$; 
+\item $\nt{max\_delta\_t}$; drive caller that contains a function of the excitation angular frequency (passed as $Var$) returning the maximum value of the time step $\Delta t$; 
 if the time step computed using $\nt{steps\_number}$ is greater
-than $\nt{max\_delta\_t}$ then the time step is reduced according to 
-$\Delta t = \Delta t / \mathrm{ceil}(\Delta t / \nt{max\_delta\_t})$.
+than the value returned by $\nt{max\_delta\_t}$ then the time step is reduced according to 
+$\Delta t = \Delta t / \mathrm{ceil}(\Delta t / \nt{max\_delta\_t})$. The value returned by $\nt{max\_delta\_t}$ must always be greater than 0.
 
 \item $\nt{omega0} > 0$, the initial excitation angular frequency;
 
@@ -118,25 +123,26 @@ Since the amount of simulation time required to reach a certain excitation angul
 
 The list of custom angular frequencies is terminated by the keyword \kw{last};
 
-\item $\nt{initial\_time}$ the simulation time after which the elements begins its action
+\item $\nt{initial\_time}$; the simulation time after which the elements begins its action
 
-\item $\nt{time\_step}$ optional prescribed time step for $t<=\nt{initial\_time}$; $\nt{time\_step}(\nt{initial\_time})$
+\item $\nt{initial\_time\_step}$; optional drive caller that returns the prescribed time step for $t<=\nt{initial\_time}$; $\nt{initial\_time\_step}(\nt{initial\_time})$
 needs to be equal to the time step computed by the element for the first forcing frequency.
 
 \item \kw{RMS test} is a keyword to perform the test not on the difference between the values of the test functions,
 but on their RMSs; the relative difference of each test function RMS between two periods needs to be
 $<=\nt{tolerance}$.
 
-\item \kw{RMS target} modifies the RMS convergence test: convergence is achieved if the test function RMS 
-also matches, within $\nt{tolerance}$, the prescribed $\nt{RMS\_target\_value}$. This is
+\item \kw{RMS target} modifies the RMS convergence test: convergence is achieved if the target function RMS 
+also matches, within $\nt{tolerance}$, the value returned by the drive $\nt{RMS\_target\_value}$, which is a function of the excitation angular frequency  (passed as $Var$). This is
 accomplished by changing the module \kw{amplitude} private data. This option makes sense if and only if
-there is a single test variable. If $\nt{min\_periods}$ is specified then the periods counter
+there is a single \kw{target} variable. If $\nt{min\_periods}$ is specified then the periods counter
 is reset also for an \kw{amplitude} change, and not only for a frequency change.
 
-\item \kw{max amplitude relative difference}: if the new computed \kw{amplitude} $an$ is such that
-$|an - a| / \min(an, a)  > \nt{max\_amplitude\_relative\_difference}$, where $a$ is the current amplitude,
-re-compute $an$ using a lower-order interpolation method.\\
-Default value: $\nt{max\_amplitude\_relative\_difference} = 2$.
+\item $\nt{initial\_amplitude}$ is the initial value of the private data \kw{amplitude}.
+
+\item $\nt{overshoot}$: multiplicated to $\nt{tolerance}$ gives the value by which the upper and lower values of the old RMSs are overestimated and underestimated, respectively, when computing the approximate gradient needed to compute the next value of the private data \kw{amplitude} with the Newton's method.
+
+\item $\nt{RMS\_prev\_periods}$: number of periods preceding the current period whose test signals RMS amplitude are compared to the current period test signals RMS amplitude to check convergence; default value is 2.
 
 \item $\nt{min\_periods} > 1$ is the minimum number of periods that must be performed before checking for convergence.
 
@@ -154,6 +160,14 @@ Using this keyword replaces the need to manually define an \kw{element} drive ca
 (see the discussion of the \kw{timestep} private datum).
 
 \item \kw{print all periods} is a keyword to print a row in the \emph{user-defined} elements output file at the end of each period, and not only at convergence for each specific excitation frequency.
+
+\item $\nt{write\_after\_convergence\_periods}>=0$ is the number of periods to be run after convergence is achieved; default value is 0.
+This option makes sense if the output of the simulation is controlled by an \kw{output meter} using the private data \kw{output},
+ which is a boolean variable defined by this element that is equal to 1 when the output must be written to the \texttt{.usr} file or for $\nt{write\_after\_convergence\_periods}$ periods after convergence.
+
+\item $\nt{write\_frequency\_after\_convergence}$ causes the private data \kw{output} to be equal to 1 
+every $\nt{write\_frequency\_after\_convergence}$ timesteps during the 
+$\nt{write\_after\_convergence\_periods}$ periods; the default value is 1. 
 \end{itemize}
 
 \paragraph{Output.}\label{hfelem_output}
@@ -184,8 +198,8 @@ Each output row contains:
 	\item the magnitude and phase are output (pair of reals)
 	if \kw{output format} is set equal to \kw{magnitude phase};
 	the magnitude is divided by \kw{amplitude} if \kw{output format} is \kw{normalized}.
-\item[last)] the \kw{amplitude}
 \end{itemize}
+\item[last)] in case that the argument \kw{RMS target} was provided, the value of private data \kw{amplitude} and the RMS of the target signal.
 \end{itemize}
 For example, to plot the results of the first output signal in Octave (or Matlab), one can use:
 \begin{framed}
@@ -265,6 +279,21 @@ This may be useful, for example, to modify the amplitude of the signal as a func
 \item \kw{amplitude}, the amplitude of the excitation signal (equal to 1, unless \kw{RMS target} is set).
 
 \item \kw{count}, the number of frequencies that have been applied so far.
+
+\item \kw{output}, boolean variable equal to 1 when the output must be written to the \texttt{.usr} file or for $\nt{write\_after\_convergence\_periods}$ periods after convergence every $\nt{write\_frequency\_after\_convergence}$ timesteps. This private data should be called by an \kw{output meter}, and it is conceived to avoid the need very large output files (other than the \texttt{.usr} file) when only the history of the variables in the converged periods matters.
+
+To this end, the analysis (typically, an \kw{initial value} problem) should be set up with a \nt{control data} section containing
+\begin{Verbatim}[commandchars=\\\{\}]
+    \kw{output meter} : \kw{postponed} , (\ty{unsigned}) \bnt{outputmeter_drive_label} ;
+\end{Verbatim}
+Then, after instantiating the \kw{hfelem}, one must define the drive caller $\nt{outputmeter\_drive\_label}$ with the following statement or any other statement calling the \kw{hfelem} private data \kw{output}.
+\begin{Verbatim}[commandchars=\\\{\}]
+    \kw{drive caller} : (\ty{unsigned}) \bnt{outputmeter_drive_label} ,
+        \kw{element} , (\ty{unsigned}) \bnt{hfelem_label} , \kw{loadable} ,
+        \kw{string} , \kw{"output"} , \kw{direct} ;
+\end{Verbatim}
+
+
 
 \end{itemize}
 
