--- a/manual/input/general.tex
+++ b/manual/input/general.tex
@@ -976,7 +976,7 @@ matrix, within the desired tolerance, is input}.
 
 \item Euler angles: keyword \kw{euler}, followed by the three
 values, as output by structural nodes.
-The keywords \kw{euler123}, \kw{euler313} and \kw{euler321}
+The keywords \kw{euler123} (same as \kw{euler}, also known as Tait-Bryan or Cardano angles), \kw{euler313} and \kw{euler321}
 allow to use orientations in the sequence specified by the keyword.
 \begin{Verbatim}[commandchars=\\\{\}]
     \{ \kw{euler} | \kw{euler123} | \kw{euler313} | \kw{euler321} \} ,
